--- a/carapp/templates/Contacts.html
+++ b/carapp/templates/Contacts.html
@@ -13,7 +13,7 @@
                 Contact us at 
                 <a href="tel:+254735522680" class="fw-semibold" style="color: #b36b00;">+254 735 522 680</a> 
                 or email 
-                <a href="beruogano@gmail.com" class="fw-semibold" style="color: #b36b00;">beruogano@gmail.com</a>
+                <a href="beruogano@gmail.com" class="fw-semibold" style="color: #b36b00;">benangano@gmail.com</a>
             </p>
         </div>
     </div>
