--- a/carapp/templates/Booking_success.html
+++ b/carapp/templates/Booking_success.html
@@ -1,11 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
+
 {% block content %}
-<div class="py-5 text-center text-white" style="background: url('{% static 'banner.jpg' %}') center/cover no-repeat; min-height: 200px;">
-    <div class="container d-flex justify-content-center">
-        <div class="p-4 rounded shadow" style="background-color: #FFD700; color: #333; max-width: 600px;">
-            <h2 class="fw-bold mb-2">Thank you<br>we'll get back to you shortly</h2>
+<div class="position-absolute start-50 translate-middle-x w-100 px-3" style="max-width: 600px; top: 20px;">
+
+    <!-- Success card positioned near top -->
+    <div class="position-absolute start-50 translate-middle-x"
+         style="top: 80px; max-width: 600px;">
+        <div class="p-4 rounded shadow bg-warning text-dark">
+            <h2 class="fw-bold mb-2">Thank you</h2>
+            <p class="mb-0">Your booking has been received.<br>We will get back to you shortly.</p>
         </div>
     </div>
+
 </div>
 {% endblock content %}
